<resources>
    <string name="app_name">a21200373</string>
    <string name="buttonleft1">até 1.250</string>
    <string name="buttonleft2">mais de 1.250 até 1.750</string>
    <string name="buttonleft3">mais de 1.750 até 2.500</string>
    <string name="buttonleft4">mais de 2.500</string>
    <string name="buttonright1">até 120</string>

    <string name="buttonright2">mais de 120 até 180</string>
    <string name="buttonright3">mais de 180 até 250</string>
    <string name="buttonright4">mais de 250</string>
    <string name="calcularIUC">CalcularIUC</string>
    <string name="valor">Valor</string>
</resources>
